--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,11 @@ body {
 }
 
 #main-container {
+    top: 0;
     display: block ;
-    background-color: var(--grey);
     text-align: center;
+    max-width: 600px;
+    min-width: 500px;
 
 }
 
@@ -62,30 +64,34 @@ a {text-decoration: none;}
     justify-content: center;
     align-items: center;
 
-    height: 16vh;
-    width: 8vw;
+    height: 100px;
+    width: 100px;
     background-color: var(--light);
     border: 4px solid var(--darklight);
     border-radius: 50%;
     display: inline-block;
 }
+
 #btn {
     grid-area: btn;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     margin: 4vh 0 4vh 0;
+
 }
+
 #descr{
     grid-area: descr;
+    background-color: var(--darker);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.dot {
-    height: 4vh;
-    width: 2vw;
+.eye {
+    height: 20px;
+    width: 15px;
     margin-top: 2vh;
     background-color: var(--darklight);
     border-radius: 50%;
@@ -93,17 +99,11 @@ a {text-decoration: none;}
   }
 
   #mouth {
-    height: 2vh;
-    width: 4vw;
+    height: 8px;
+    width: 60px;
     background-color: var(--darklight);
     border-radius: 0;
     display: inline-block;
-  }
-
-  #btn-bad {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
   }
 
   #btn-good {
@@ -117,10 +117,13 @@ a {text-decoration: none;}
     background-color: red;
   }
 
+  #smile, #sad {
+    display: none;
+  }
+
   @media screen and (max-width: 768px) {
 
     body {
-        background-color: var(--dark);
         margin: 0;
         padding: 0;
         height: 100vh;
